feat: implement get videogames by saga in infrastructure and application layers